Add team endpoint
