# bitcamp-openapi.yaml
@@ -23,6 +23,8 @@ tags:
     description: Events within Bitcamp.
   - name: mentorship
     description: Mentorship server
+  - name: teams
+    description: Team endpoints
 paths:
   /login:
     post:
@@ -427,6 +429,26 @@ paths:
             application/json:
               schema:
                 type: string
+  /teams:
+    get:
+      tags:
+        - teams
+      description: Get team scores
+      summary: Get team scores
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    color:
+                      type: string
+                    points:
+                      type: integer
 components:
   schemas:
     LoginBody:
